Add callback to copy texture backed frames in WebRtcVideoFrameAdapter

This CL adds a callback to copy texture backed frames in WebRtcVideoFrameAdapter
so that hardware decoded video tracks can be cloned or forwarded. The callback is
assigned by WebRtcVideoCapturerAdapter and runs in main renderer thread.

BUG=642663
TEST=Ran https://loopback-dot-apprtc.appspot.com/?debug=loopback&vsc=h264 on Mac.

Review-Url: https://codereview.chromium.org/2456443002
Cr-Commit-Position: refs/heads/master@{#428535}

Former-commit-id: e0a575d620207471068e04b133f7e24ff84b23bd