content/renderer/media/webrtc/webrtc_video_frame_adapter.h
@@ -7,6 +7,7 @@
 
 #include <stdint.h>
 
+#include "base/callback.h"
 #include "media/base/video_frame.h"
 #include "third_party/webrtc/common_video/include/video_frame_buffer.h"
 
@@ -17,8 +18,13 @@ namespace content {
 // different threads, but that's safe since it's read-only.
 class WebRtcVideoFrameAdapter : public webrtc::VideoFrameBuffer {
  public:
-  explicit WebRtcVideoFrameAdapter(
-      const scoped_refptr<media::VideoFrame>& frame);
+  using CopyTextureFrameCallback =
+      base::Callback<void(const scoped_refptr<media::VideoFrame>&,
+                          scoped_refptr<media::VideoFrame>*)>;
+
+  WebRtcVideoFrameAdapter(
+      const scoped_refptr<media::VideoFrame>& frame,
+      const CopyTextureFrameCallback& copy_texture_callback);
 
  private:
   int width() const override;
@@ -42,6 +48,7 @@ class WebRtcVideoFrameAdapter : public webrtc::VideoFrameBuffer {
   ~WebRtcVideoFrameAdapter() override;
 
   scoped_refptr<media::VideoFrame> frame_;
+  const CopyTextureFrameCallback copy_texture_callback_;
 };
 
 }  // namespace content
